master users in memory + msyql connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.security.user.name=debugger
-spring.security.user.password=ideas
-spring.security.user.roles={ROLE_VIEWER}
+spring.datasource.url=jdbc:mysql://192.168.1.111:4406/bank
+spring.datasource.username=root
+spring.datasource.password=tubnocor
